Merges the Ant targets that creates GNU Linux packages into a single one and creates a tar.gz archive per architecture